--- a/ShareMyTaxi/package.json
+++ b/ShareMyTaxi/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser-dynamic": "4.0.0",
     "@ionic-native/core": "3.4.2",
     "@ionic-native/geolocation": "^3.4.4",
+    "@ionic-native/google-maps": "^3.5.0",
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "1.1.6",
     "angularfire2": "^2.0.0-beta.8",
     "firebase": "^3.7.6",
     "ionic-angular": "3.0.1",
